Package: R.rsp
==============

Version: 0.4.6 [2011-03-12]
o The new argument in 'trimRsp' introduced in v0.4.4 now defaults
  to TRUE everywhere.
o BUG FIX: The main 'R Server Pages' page launched by browseRsp()
  would list package twice on a Windows system.
o CLEANUP: Some minor R code cleanups.


Version: 0.4.5 [2011-03-08]
o Updated getParameter() of HttpRequest to return all values of a
  query parameter with multiple entries.  Added argument 'drop'.
o BUG FIX: getHttpRequest() of HttpDaemon would drop all but the last
  of replicated query parameters of the same name, which for instance
  may occur if an HTML form with replicated checkboxes is used.
  Thanks to Truc Trung at University of Bergen, Norway, for this report.


Version: 0.4.4 [2011-03-08]
o Now rsptex() trims white space of RSP blocks so that RSP-only blocks
  no longer introduces newlines (that previously had to be escaped).
o Added argument 'trimRsp' to parseRsp() for trimming white spaces
  surrounding RSP blocks that have preceeding and succeeding white space
  and that are followed by a newline.  Currently it defaults to FALSE,
  but this may change in a future release.  The same was added to old
  translateRspV1() for compatibility reasons.  Note, compileRsp() and
  sourceRsp() will pass this argument down to these functions via '...'.


Version: 0.4.3 [2011-02-20]
o Now argument 'pdf' of rsptex() default to TRUE.
o DOCUMENTATION: Added example(rsptex).
o DOCUMENTATION: First draft of a article on how to generate
  dynamic reports by extending LaTeX with RSP.


Version: 0.4.2 [2011-02-14]
o DOCUMENTATION: Added a section to help(rsptex) explaining in what 
  environment the RSP document is evaluated and how to retrieve it 
  and its content.
o BUG FIX: parseRsp() would generate invalid R code/R comments for
  multiline <%=...%> statements.


Version: 0.4.1 [2011-01-06]
o DOCUMENTATION: Clarified in the help of HttpDaemon that it is only 